# projeuler

./: 001-35mult.go  002-fibevensum.go  002.coffee  003-primefactor.go  003.coffee  004-palindrome.go  005-mult20.go  005.coffee  006-sqdif.go  007-1001prime.go  008-bigNum5.go  008.coffee  009-pitagrorean1000.go  010-sum2milprimes.go  010.coffee  011-grid20.go  011.coffee  012-triangover500div.go  013-largesum.go  013.coffee  014-collatz.go  016.coffee  017.coffee  018.coffee  019.coffee  020.coffee  023.coffee  024.coffee  025.coffee  026.coffee  028.coffee  029.coffee  031.coffee  032.coffee  034.coffee  035.coffee  038.coffee  039.coffee  042.coffee  043.coffee  (+25 more)
001/: main.go  main.hs  main_test.go
002/: main.go  main.hs  main_test.go
003/: Cabal.md  LICENSE  Main.hs  ProjectEuler003.cabal
004/: Main.hs
005/: Problem005.cabal  README.md  stack.yaml
005/src/: Main.hs
006/: Main.hs  README.md
007/: LICENSE  Problem007.cabal  README.md
007/src/: Main.hs
008/: Main.hs  README.md  TheNumber.hs
009/: Main.hs  README.md
010/: Main.hs  README.md
011/: Main.hs  README.md
012/: Main.hs  Primes.hs  README.md
013/: Main.hs  README.md
014/: Main.hs  README.md
015/: Main.hs  README.md
016/: Main.hs  README.md
017/: Main.hs  README.md
018/: Main.hs  README.md
019/: Main.hs  README.md
020/: Main.hs  README.md
021/: Main.hs  README.md
022/: Main.hs  README.md
023/: Guru.hs  Main.hs  README.md
024/: Main.hs  README.md
algorithms/: README.md  binary-search.coffee  sorting.coffee
coffee-archive/: 001.coffee  004.coffee  006.coffee  (+41 more)
(+11 files in other folders)
