name:                Problem007
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leonistor/Problem007#readme
license:             BSD3
license-file:        LICENSE
author:              Leo Nistor
maintainer:          leo.nistor@gmail.com
copyright:           copyleft
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Problem007
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,Numbers
